--- a/App1/index.html
+++ b/App1/index.html
@@ -20,6 +20,7 @@
   </div>
   <div class="row">
     <div class="col-sm-6">
+      <a class="btn btn-primary" href="page2.html">Next level</a>
       <section class="draggable-items">
       </section>
 
