--- a/App1/index.html
+++ b/App1/index.html
@@ -34,7 +34,8 @@
   </div>
 </div>
 <!-- partial -->
-  <script  src="./script.js"></script>
+<script type="text/javascript" src="data.js"></script> 
+<script type="text/javascript" src="script.js"></script> 
 
 </body>
 </html>
