css and new titles

--- a/App1/index.html
+++ b/App1/index.html
@@ -12,15 +12,17 @@
 
 
 <div class="container">
+
   <div class="row">
     <section class="score">
+      <h1 id="Error-h1"></h1>
       <span class="correct">0</span>/<span class="total">0</span>
-      <button id="play-again-btn">Play Again</button>
+      <button id="play-again-btn">Jugar Otra vez</button>
     </section>
   </div>
   <div class="row">
     <div class="col-sm-6">
-      <a class="btn btn-primary" href="page2.html">Next level</a>
+      <a class="btn btn-primary" href="page2.html">Siguiente Nivel</a>
       <section class="draggable-items">
       </section>
 
@@ -34,7 +36,7 @@
   </div>
 </div>
 <!-- partial -->
-<script type="text/javascript" src="data.js"></script> 
+<script type="text/javascript" src="data1.js"></script> 
 <script type="text/javascript" src="script.js"></script> 
 
 </body>
