--- a/App1/page2.html
+++ b/App1/page2.html
@@ -14,12 +14,14 @@
 <div class="container">
   <div class="row">
     <section class="score">
+      <h1 id="Error-h1"></h1>
       <span class="correct">0</span>/<span class="total">0</span>
-      <button id="play-again-btn">Play Again</button>
+      <button id="play-again-btn">Jugar Otra vez</button>
     </section>
   </div>
   <div class="row">
     <div class="col-sm-6">
+      <a class="btn btn-primary" href="index.html">Nivel anterior</a>
       <section class="draggable-items">
       </section>
 
@@ -33,7 +35,8 @@
   </div>
 </div>
 <!-- partial -->
-  <script  src="./script2.js"></script>
+<script type="text/javascript" src="data2.js"></script> 
+<script type="text/javascript" src="script2.js"></script> 
 
 </body>
 </html>
