back button and Image update

--- a/App1/index.html
+++ b/App1/index.html
@@ -12,11 +12,12 @@
 </head>
 <body>
 
-
 <div class="container">
 
   <div class="row">
     <section class="score">
+      <a class="btn btn-secondary" href="../index.html">Salir</a>
+
       <h1 id="Error-h1"></h1>
       <span class="correct">0</span>/<span class="total">0</span>
       <button id="play-again-btn">Jugar Otra vez</button>
@@ -24,7 +25,7 @@
   </div>
   <div class="row">
     <div class="col-sm-6">
-      <a class="btn btn-primary" href="page2.html">Siguiente Nivel</a>
+      <a class="btn btn-primary" href="page2.html">Siguiente Sección</a>
       <section class="draggable-items">
       </section>
 
