--- a/App1/page2.html
+++ b/App1/page2.html
@@ -22,7 +22,7 @@
   </div>
   <div class="row">
     <div class="col-sm-6">
-      <a class="btn btn-primary" href="index.html">Nivel anterior</a>
+      <a class="btn btn-primary" href="index.html">Sección anterior</a>
       <section class="draggable-items">
       </section>
 
