--- a/maze-game/index.html
+++ b/maze-game/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Escapa del laberinto</title>
   </head>
   <body>
-
+    <a class="btn btn-secondary" href="../index.html">Salir</a>
     <h1 class="title">Escapa del laberinto</h1>
 
     <div class="complete">
